[gd_scene load_steps=8 format=2]

[ext_resource path="res://font_stuff/Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://interface/general_options.tscn" type="PackedScene" id=2]
[ext_resource path="res://pause/pause_interface.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.364706, 0.152941, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.964706, 0.25098, 0.25098, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.341176, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.745098, 0.0705882, 0, 1 )

[node name="pause_control" type="Control"]
pause_mode = 2
margin_right = 1024.0
margin_bottom = 600.0
rect_scale = Vector2( 2, 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -423.855
margin_top = -297.99
margin_right = -223.855
margin_bottom = -97.9899
rect_min_size = Vector2( 200, 200 )
rect_scale = Vector2( 1.73567, 1.41574 )
custom_styles/panel = SubResource( 1 )

[node name="return" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.848
margin_top = -293.899
margin_right = -95.8479
margin_bottom = -273.899
rect_scale = Vector2( 1.5, 1.5 )
custom_styles/hover = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "X"

[node name="general_options" parent="." instance=ExtResource( 2 )]
pause_mode = 2
margin_left = 238.836
margin_top = 108.616
margin_right = 278.836
margin_bottom = 148.616

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -339.0
margin_top = -82.0923
margin_right = -175.0
margin_bottom = -42.0923
rect_min_size = Vector2( 150, 40 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 1, 0.254902, 0.254902, 1 )
custom_colors/font_color = Color( 1, 0.254902, 0.254902, 1 )
custom_colors/font_color_hover = Color( 1, 0.254902, 0.254902, 1 )
custom_colors/font_color_pressed = Color( 1, 0.254902, 0.254902, 1 )
text = "Go to menu"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button" to="general_options" method="_save_settings"]
